# NFL-Combine-Analysis

./: Project Progress 1.docx  README.md  pyproject.toml
nfl-combine-main/nfl-combine-main/: dbt_project.yml  dev.duckdb
nfl-combine-main/nfl-combine-main/background_noise/: behave.py  old_transform_test.py
nfl-combine-main/nfl-combine-main/dbt_stuffs/: profiles.yml
nfl-combine-main/nfl-combine-main/models/: feature_1.py  feature_2.py  feature_3.py  schema.yml  transform_.py
nfl-combine-main/nfl-combine-main/models/extractions/: extract_combine.py  extract_fantasy.py
nfl-combine-main/nfl-combine-main/nfl/: pyproject.toml
nfl-combine-main/nfl-combine-main/nfl/features/: extract.py  feature_1.py  feature_2.py  feature_3.py  load.py  playground.ipynb  transform.py
nfl-combine-main/nfl-combine-main/nfl/tests/: test_extract.py  test_features.py  test_transform.py
