[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
behave = "^1.2.6"
dbt-duckdb = "^1.6.1"
sqlalchemy = "^2.0.23"
boxsdk = "^3.9.2"
box-sdk-gen = "^0.2.3"
pandas = "^2.1.3"
pytest = "^7.4.3"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
pip = "^23.3.1"
scikit-learn = "^1.3.2"
ipywidgets = "^8.1.1"

[tool.poetry.group.dev.dependencies]
harlequin = "^1.1.1"
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"